Add /api/v1/{formations|actions|sessions|organismes_formateurs}/avis
